minor fixes on styling/spacing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,7 @@ h3 {
 
 p {
   font-family: Chivo, 'Chivo', sans-serif;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 a {
